# NG-NetMS

./: .clang-tidy  .clangd  CMakeLists.txt  README.md  contributors.txt  crontab.init.in  docker-run-core.sh  docker-run-perl-dev.sh  docker-run-psql.sh  docker-run-web-dev.sh  docker-run-web.sh  env.list.example  env.list.in  index.html  ngnms-audit.service.in  nmap.sudo.in  params.json  settings.cmake.dist  vhost.conf.in
Backoffice/: make_release.php
Backoffice/sources/configs/: archive-time.conf  archive.conf
Backoffice/sources/lib/: Emsgd.pm  NGNMS_Cisco.pm  NGNMS_DB.pm  NGNMS_Extreme.pm  NGNMS_HP.pm  NGNMS_Juniper.pm  NGNMS_JuniperJav.pm  NGNMS_Linux.pm  NGNMS_SSG5.pm  NGNMS_util.pm  passwds.pm
Backoffice/sources/mibs/: CISCO-PRODUCTS-MIB.my  jnpr_v1_traps.txt  mib-jnx-js-smi.txt  mib-jnx-vlan.txt
Backoffice/sources/triggers/: poll_host_tr.sh
CPP/GPL/: .gitignore  CMakeLists.txt
CPP/GPL/cmake-modules/: FindNETSNMP.cmake  FindPCRE.cmake  FindPQXX.cmake
CPP/GPL/common/: ConfigFileReader.cpp  ConfigFileReader.h  ConfigFileWriter.cpp  ConfigFileWriter.h  Configuration.h  Configuration.h.in  Cryptography.cpp  Cryptography.h  DbConnector.cpp  DbConnector.h  DbProviderDiscoverySettings.h  DbReturnCode.h  DbSettings.h  DiscoverySettings.h  LogWriter.cpp  LogWriter.h  MessageQueue.cpp  MessageQueue.h  NetFlowHeader_v5.h  NetFlowPacket_v5.h  NetFlowRecord_v5.h  TimeInterval.h
CPP/GPL/sources/db_settings/: NgnmsDbSettings.cpp
CPP/GPL/sources/discovery_settings/: Database.cpp  Database.h  NgnmsDbSettings.cpp
CPP/GPL/sources/event_collector/: Classifier.cpp  Classifier.h  Database.cpp  Database.h  Event.h  EventCollector.cpp  EventDecorator.hpp  EventProtocol.h  EventType.cpp  EventType.h  FileDataProvider.cpp  FilePollReader.cpp  FilePollReader.h  FilePollingDataProvider.h  IClassifier.h  IDataProvider.h  IParser.h  Logger.cpp  Logger.h  Notifier.h  Options.cpp  Options.h  ParserSyslog.cpp  ParserSyslog.h  RulesFileParser.cpp  RulesYacc.h  RulesYacc.y  TcpDataProvider.cpp  Triggers.cpp  Triggers.h  UdpDataProvider.cpp  UdpDataProvider.h  globals.rgf
CPP/GPL/sources/event_collector/ApacheDPs/: ApacheFileDP.cpp  ApacheFileDP.h  ApacheFilePollingDP.cpp  ApacheFilePollingDP.h
CPP/GPL/sources/event_collector/ApacheParser/: ApacheParser.cpp  ApacheParser.h
CPP/GPL/sources/event_collector/CANParser/: CANGlobalsParser.hpp  CANParser.cpp  CANParser.h
CPP/GPL/sources/event_collector/Custom1Parser/: Custom1Parser.cpp  Custom1Parser.h
CPP/GPL/sources/event_collector/Custom2Parser/: Custom2Parser.cpp  Custom2Parser.h
CPP/GPL/sources/event_collector/NetFlowDPs/: NetFlowTcpDP.cpp  NetFlowTcpDP.h  NetFlowUdpDP.cpp  NetFlowUdpDP.h  TcpServer.cpp  TcpServer.h
CPP/GPL/sources/event_collector/NetFlowParser/: NetFlowParser.cpp  NetFlowParser.h  NetFlowV5Parser.cpp  NetFlowV5Parser.h
CPP/GPL/sources/event_collector/RuleParser/: RuleFormat.txt  RulesFileParser.cpp  RulesFileParser.h  RulesLex.l  RulesYacc.tab.c  RulesYacc.tab.h  RulesYacc.y  lex.yy.c
CPP/GPL/sources/event_collector/SnmpParser/: SnmpParser.cpp  SnmpParser.h
CPP/GPL/sources/event_collector/SyslogDPs/: SyslogFileDP.cpp  SyslogFileDP.h  SyslogFilePollingDP.cpp  SyslogFilePollingDP.h  SyslogTcpDP.cpp  SyslogTcpDP.h  SyslogUdpDP.cpp  SyslogUdpDP.h
CPP/GPL/sources/event_collector/SyslogParser/: JunosFacilityGroups.cpp  JunosFacilityGroups.h  ParserSyslog.cpp  ParserSyslog.h
CPP/GPL/sources/observer/: Database.cpp  Database.h  Initializer.cpp  Initializer.h  Model.cpp  Model.h  ObserverOptions.cpp  ObserverOptions.h  Origin.cpp  Origin.h  OriginManager.cpp  OriginManager.h  Profiler.cpp  Profiler.h  SnmpObserver.cpp  SnmpObserver.h  SnmpOption.cpp  SnmpOption.h  main.cpp
CPP/GPL/sources/option_profiler/: Database.cpp  Database.h  Logger.cpp  OptPrfOptions.cpp  OptPrfOptions.h  OptionProfiler.cpp
Configs/SSH/: ssh_config
Core/: .dockerignore  Dockerfile  contributors.txt  crontab.init  migrate-db.sh  nmap.sudo  start-cron.sh  wait-for.sh  worker_runit.sh
Core/NGREADY/: .dockerignore  MANIFEST.SKIP  README.md  dist.ini.in  test-res.pl  test.pm  weaver.ini
Core/NGREADY/database/: db_init.sh  migrate.pl  save_access_methods.sh
Core/NGREADY/lib/: Emsgd.pm  NGREADY.pm  cisco_ssh.pl
Core/NGREADY/mibs/: MTA-MIB.txt  jnpr_v1_traps.txt  mib-jnx-chas-defines.txt  mib-jnx-ex-smi.txt  mib-rfc2574.txt  mib-rfc3621.txt
Core/NGREADY/nas/: nas
Core/NGREADY/pmea/: DB.pmea  Log4Role.pmea  Net-Applianse-Session.pmea  Net-CLI-Interact.pmea  PollHostRole.pmea  SessionRole.pmea
Core/NGREADY/t/: NGNMS_LinuxSpec.t  access_method.t  audit_autodetect.t  cisco.t  juniper.t  scannner-masscan.t  scannner-nmap.t  scannner-prepare.t  scannner.t  seedhost.t  todo.t
Core/NGREADY/triggers/: bell.sh  poll_host_tr.sh  trigger.sh
Core/NGREADY/wiki/: InterfaceParser.md  PollHost interface.md  PollHostFlow.md
Database/init-db/: init-db.sql
Docs/: Install.txt
Docs/Apache/: envars  ngnms.local.conf
Docs/Etc/: environment  sudoers
Docs/Etc/sudoers.d/: ngnms-plus
Docs/SNMP/: snmp.conf  snmpd  snmptrapd.conf
Docs/SNMP/Original/: snmpd
Docs/SSH/Original/: ssh_config
Web/: .dockerignore  .gitignore  Dockerfile  grafana-proxy.conf  make_release.php  php.ini  vhost.conf
Web/sources/: index.php
Web/sources/css/: style_diff.css
Web/www/custom_config/: main.php.example
Web/www/html/: .htaccess  index.php
cmake-modules/: FindCpanm.cmake  FindCpm.cmake  FindDzil.cmake  FindNMAP.cmake
docker-build/: docker-build.sh
docker-build/centos/: build.sh
docker-build/compiler/: Dockerfile  buildimage.sh
docker-build/ngnms-daemon/: Dockerfile  start.sh
docker-build/ngnms-grafana/: Dockerfile  run.sh
docker-build/ngnms-web/: Dockerfile  README.md  grafana-proxy.conf  php.ini  vhost-ssl.conf
docker-run/: .env  docker-compose.yml  env.list  ngnms-core-dev.sh  ngnms-core.sh  ngnms-web-dev.sh  ngnms-web.sh
docker-run/grafana/: grafana.sh
misc/pmea/: App.pmea  CommandLineOptions.pmea  DB.pmea  Net-CLI-Interact.pmea  PollHostPluginInterface.pmea
trunk/Backoffice/: make_release.php
trunk/DB/: ngnms.sql
(+731 files in other folders)
